--- a/ProgettoAMM/web/M1/cliente.html
+++ b/ProgettoAMM/web/M1/cliente.html
@@ -209,7 +209,7 @@ and open the template in the editor.
    <tr>
        <td>GOMPY BSP2 CARICHINO TIP-TIP WHITE</td>
        <td><img title="GOMPY BSP2 CARICHINO TIP-TIP WHITE" alt="Foto GOMPY BSP2 CARICHINO TIP-TIP WHITE" src="http://www.disport.it/m4n/media/image/prodotti/a_57020000.jpg" width="150" height="130"></td>
-       <th>14 pezzi</th>
+       <td>14 pezzi</td>
        <td>€6,99</td>
        <td><a href='cliente.html'>Aggiungi al carrello</a></td>
    </tr>
