--- a/ProgettoAMM/web/M1/login.html
+++ b/ProgettoAMM/web/M1/login.html
@@ -9,6 +9,9 @@ and open the template in the editor.
         <title>Login sito web</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="HTML,AMM,TIRO CON L'ARCO">
+        <meta name="description" content="Sito di e-commerce tiro con l'arco">
+        <meta name="author" content="Stefano Cabiddu">
     </head>
     <body>
         <strong>Compila questo form se ti vuoi loggare al sito</strong> <br> <br>
