--- a/ProgettoAMM/web/M1/descrizione.html
+++ b/ProgettoAMM/web/M1/descrizione.html
@@ -9,6 +9,9 @@ and open the template in the editor.
         <title>ECommerceArco.it</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="HTML,AMM,TIRO CON L'ARCO">
+        <meta name="description" content="Sito di e-commerce tiro con l'arco">
+        <meta name="author" content="Stefano Cabiddu">
     </head>
     <body>
         <h1>Ecommerce tiro con l'arco</h1>
